--- a/argocd-deploy/staging_k8s_manifest_microservices/frontend_k8s.yml
+++ b/argocd-deploy/staging_k8s_manifest_microservices/frontend_k8s.yml
@@ -112,14 +112,19 @@ metadata:
   name: frontend-external
   labels:
     app: frontend
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: /
+    external-dns.alpha.kubernetes.io/hostname: app.example.com.
 spec:
   type: LoadBalancer
   selector:
     app: frontend
   ports:
-  - name: http
-    port: 80
-    targetPort: 8080
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 8080
+
 ---
 apiVersion: v1
 kind: ServiceAccount
