--- a/k8s-environ-manifest/dev_k8s_manifest_microservices/cartservice_k8s.yml
+++ b/k8s-environ-manifest/dev_k8s_manifest_microservices/cartservice_k8s.yml
@@ -29,7 +29,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/cartservice:latest
+        image: marypearl/cartservice:latest
         ports:
         - containerPort: 7070
         env:
