--- a/deployment.yaml
+++ b/deployment.yaml
@@ -49,7 +49,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/emailservice:latest
+        image: marypearl/emailservice:latest
         ports:
         - containerPort: 8080
         env:
@@ -123,7 +123,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image: charlino4u/checkoutservice:latest
+          image: marypearl/checkoutservice:latest
           ports:
           - containerPort: 5050
           readinessProbe:
@@ -206,7 +206,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/recommendationservice:latest
+        image: marypearl/recommendationservice:latest
         ports:
         - containerPort: 8080
         readinessProbe:
@@ -284,7 +284,7 @@ spec:
                 - ALL
             privileged: false
             readOnlyRootFilesystem: true
-          image:  charlino4u/frontend:latest
+          image:  marypearl/frontend:latest
           ports:
           - containerPort: 8080
           readinessProbe:
@@ -416,7 +416,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image:  charlino4u/paymentservice:latest
+        image:  marypearl/paymentservice:latest
         ports:
         - containerPort: 50051
         env:
@@ -489,7 +489,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image:  charlino4u/productcatalogue:latest
+        image:  marypearl/productcatalogservice:latest
         ports:
         - containerPort: 3550
         env:
@@ -562,7 +562,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image:  charlino4u/cartservice:latest
+        image:  marypearl/cartservice:latest
         ports:
         - containerPort: 7070
         env:
@@ -740,7 +740,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/loadgenerator:latest
+        image: marypearl/loadgenerator:latest
         env:
         - name: FRONTEND_ADDR
           value: "frontend:80"
@@ -792,7 +792,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image:  charlino4u/currencyservice:latest
+        image:  marypearl/currencyservice:latest
         ports:
         - name: grpc
           containerPort: 7000
@@ -865,7 +865,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/shippingservice:latest
+        image: marypearl/shippingservice:latest
         ports:
         - containerPort: 50051
         env:
@@ -939,7 +939,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/adservice:latest
+        image: marypearl/adservice:latest
         ports:
         - containerPort: 9555
         env:
