--- a/k8s-environ-manifest/staging_k8s_manifest_microservices/emailservice_k8s.yml
+++ b/k8s-environ-manifest/staging_k8s_manifest_microservices/emailservice_k8s.yml
@@ -29,7 +29,7 @@ spec:
               - ALL
           privileged: false
           readOnlyRootFilesystem: true
-        image: charlino4u/emailservice:latest
+        image: marypearl/emailservice:latest
         ports:
         - containerPort: 8080
         env:
